--- a/templates/index.css
+++ b/templates/index.css
@@ -2,3 +2,23 @@ table td{
   border: 1px solid black;
   padding: 4px 12px;
 }
+
+.column2{
+	position: absolute;
+	width: 175px;
+	/*border: 1px solid red;*/
+	left: 300px;
+	bottom: 255px;
+}
+.column3{
+	position: absolute;
+	width: 175px;
+	left: 600px;
+	bottom: 255px;
+
+}
+.pin{
+	font-size: 50px;
+	width: 50px;
+	height: 50px;
+}
