--- a/static/index.css
+++ b/static/index.css
@@ -1,18 +1,23 @@
+
+*{
+	/*border: 1px solid red;*/
+}
 table td{
   border: 1px solid black;
   padding: 4px 12px;
 }
 
 .column2{
+
 	position: absolute;
-	width: 175px;
+	width: 250px;
 	/*border: 1px solid red;*/
 	left: 300px;
 	bottom: 255px;
 }
 .column3{
 	position: absolute;
-	width: 175px;
+	width: 250px;
 	left: 600px;
 	bottom: 255px;
 
