--- a/static/index.css
+++ b/static/index.css
@@ -6,9 +6,14 @@ table td{
   border: 1px solid black;
   padding: 4px 12px;
 }
+.column1{
+	position: absolute;
+	background-color:#F0F8FF;
+	border: 1px solid red;
+	width: 250px;
 
+}
 .column2{
-
 	position: absolute;
 	width: 250px;
 	/*border: 1px solid red;*/
@@ -23,7 +28,12 @@ table td{
 
 }
 .pin{
-	font-size: 50px;
+	font-size: 30px;
 	width: 50px;
 	height: 50px;
+}
+#button{
+	position: absolute;
+	
+	bottom: 200px;
 }
