--- a/static/pass.css
+++ b/static/pass.css
@@ -1,4 +1,15 @@
+table{
+    border-collapse: collapse;
+}
 table td{
   border: 1px solid black;
-  padding: 4px 12px;
+    text-align: center;
+/*  padding: 4px 12px;*/
+    height: 50px;
+    width: 50px;
+    font-size: 25px;
+}
+
+.letter{
+    padding-right: 10px;
 }
