--- a/static/pass.css
+++ b/static/pass.css
@@ -1,13 +1,18 @@
 table{
     border-collapse: collapse;
 }
+
+table th{
+    font-size: 20px;
+}
+
 table td{
   border: 1px solid black;
     text-align: center;
 /*  padding: 4px 12px;*/
     height: 50px;
     width: 50px;
-    font-size: 25px;
+    font-size: 30px;
 }
 
 .letter{
