--- a/static/index.css
+++ b/static/index.css
@@ -13,8 +13,10 @@ html{
     flex-direction: column;
     align-items: center;
 /*    background-color: antiquewhite;*/
-    height: 550px;
+    background-color: aliceblue;
+    height: 650px;
     min-width: 1000px;
+    padding-top: 50px;
 }
 
 .features{
@@ -27,14 +29,38 @@ html{
 /*    background-color: aliceblue;*/
 }
 
-#image{
-    
+.custom-file-input::-webkit-file-upload-button{
+    visibility: hidden;
+}
+
+.custom-file-input::before{
+    content: 'Choose file';
+    display: inline-block;
+    background: linear-gradient(top, #f9f9f9, #e3e3e3);
+    border: 1px solid #999;
+    border-radius: 3px;
+    padding: 5px 7px;
+    outline: none;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    cursor: pointer;
+    text-shadow: 1px 1px #fff;
+    font-weight: 700;
+    font-size: 10pt;
+}
+
+.custom-file-input:hover::before{
+    border-color: black;
+}
+
+.cutom-file-input:active::before{
+    background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
 }
 
 table{
     border-collapse: collapse;
     margin-left: auto;
-    margin-right: 30px;
+    margin-right: 100px;
 /*    display: inline;*/
 /*    background-color: aliceblue;*/
 /*
@@ -99,7 +125,19 @@ input:focus{
     border-radius: 5px;
 /*    margin-left: 50px;*/
     margin-top: 22px;
-    margin-left: 30px;
+}
+
+.btn{
+    background-color: #428BCA;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    width: 200px;
+    height: 50px;
+    border: transparent;
+    border-radius: 5px;
+/*    margin-left: 50px;*/
+    margin-top: 22px;
 }
 
 #button:hover{
