--- a/static/index.css
+++ b/static/index.css
@@ -2,10 +2,14 @@ html{
     font-family: 'Open Sans';
     /*background-color: #EBEBEB;*/
     background: linear-gradient(to bottom, #00BFFF, #E0FFFF);
-    height: 120%;
+    height: 115%;
 
 
 
+}
+#credits{
+	/*margin-left: 85%; */
+	margin-top: 17%;
 }
 #explanation{
     font-size: 20px;
@@ -17,7 +21,7 @@ html{
     font-size: 60px;
 }
 *{
-	border: 1px solid red;
+	/*border: 1px solid red; */
 
     box-sizing: border-box;
 }
