--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
          rel="stylesheet">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
-      <script src="static/script.js"></script>
-      <link rel="stylesheet" maxlength = "1" type="text/css" href="static/index.css">
+      <script src="/static/script.js"></script>
+      <link rel="stylesheet" maxlength = "1" type="text/css" href="/static/index.css">
    </head>
    <body>
       <div class="container">
