updated favicon path

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Sudoku Solver</title>
-      <link rel="shortcut icon" href= "{{ url_for('static', filename = 'favicon.ico')}}">
+      <link rel="shortcut icon" href= "/static/favicon.ico">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
          rel="stylesheet">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
